src/test/ui/object-safety/object-safety-sized-2.curr.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/object-safety-sized-2.rs:14:30
   |
LL |     where Self : Sized
   |                  ----- the trait cannot require that `Self : Sized`
...
LL | fn make_bar<T:Bar>(t: &T) -> &dyn Bar {
   |                              ^^^^^^^^ the trait `Bar` cannot be made into an object

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
